# Evolutionary-Optimization-Algorithms

./: .gitignore  Algorithms.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
bioopt_bench/: __init__.py  __main__.py  benchmark.py  cli.py  registry.py  reporting.py
bioopt_bench/algorithms/: __init__.py  aco.py  ga.py  gwo.py  pso.py
bioopt_bench/common/: __init__.py  seeding.py  types.py
bioopt_bench/tasks/: __init__.py  functions.py  scheduling.py  tsp.py
notebooks/: demo.ipynb
tests/: __init__.py  test_functions_bench.py  test_scheduling_bench.py  test_smoke_cli.py  test_tsp_bench.py
